--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "author": "itizawa <itizawa.pen@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "@types/node": "^18.15.8",
     "typescript": "^5.0.2"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
   }
 }
