--- a/package.json
+++ b/package.json
@@ -5,12 +5,19 @@
   "repository": "git@github.com:itizaworld/line-stock.git",
   "author": "itizawa <itizawa.pen@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "dev": "nodemon --exec ts-node src/index.ts"
+  },
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^18.15.8",
+    "nodemon": "^2.0.22",
     "typescript": "^5.0.2"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "ts-node": "^10.9.1"
   }
 }
