--- a/package.json
+++ b/package.json
@@ -8,12 +8,19 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
+    "lint": "eslint src/**/**.ts",
     "dev": "nodemon --exec ts-node src/index.ts"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^18.15.8",
+    "@typescript-eslint/eslint-plugin": "^5.56.0",
+    "@typescript-eslint/parser": "^5.56.0",
+    "eslint": "8.22.0",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-prettier": "4.2.1",
     "nodemon": "^2.0.22",
+    "prettier": "^2.8.7",
     "typescript": "^5.0.2"
   },
   "dependencies": {
