--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "typescript": "^5.0.2"
   },
   "dependencies": {
+    "@line/bot-sdk": "^7.5.2",
     "express": "^4.18.2",
     "ts-node": "^10.9.1"
   },
