--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
   },
   "dependencies": {
     "@line/bot-sdk": "^7.5.2",
+    "cheerio-httpcli": "^0.8.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^7.0.3",
+    "node-readability": "^3.0.0",
     "ts-node": "^10.9.1",
     "tsc-alias": "^1.8.4"
   },
