--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "author": "itizawa <itizawa.pen@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "build": "tsc",
-    "start": "node dist/index.js",
+    "build": "tsc -p tsconfig.json && tsc-alias -p tsconfig.json",
+    "start": "yarn build && node dist/index.js",
     "lint": "eslint src/**/**.ts",
-    "dev": "ts-node-dev -r tsconfig-paths/register src/index.ts",
-    "test": "jest"
+    "dev": "env-cmd -f ./.env ts-node-dev -r tsconfig-paths/register src/index.ts",
+    "test": "jest",
+    "deploy": "yarn build && gcloud run deploy --source ."
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
@@ -33,6 +34,7 @@
     "@line/bot-sdk": "^7.5.2",
     "cheerio-httpcli": "^0.8.3",
     "dotenv": "^16.0.3",
+    "env-cmd": "^10.1.0",
     "express": "^4.18.2",
     "mongoose": "^7.0.3",
     "node-readability": "^3.0.0",
