--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "deploy": "yarn build && gcloud run deploy --source ."
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jest": "29.5.0",
     "@types/mongoose": "^5.11.97",
@@ -33,6 +34,7 @@
   "dependencies": {
     "@line/bot-sdk": "^7.5.2",
     "cheerio-httpcli": "^0.8.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "env-cmd": "^10.1.0",
     "express": "^4.18.2",
