--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "express": "^4.18.2",
     "mongoose": "^7.0.3",
     "node-readability": "^3.0.0",
+    "passport": "^0.6.0",
+    "passport-google-oauth": "2.0.0",
     "ts-node": "^10.9.1",
     "tsc-alias": "^1.8.4"
   },
