--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/jest": "29.5.5",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^18.15.8",
+    "@types/passport": "^1.0.12",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
     "eslint": "8.49.0",
