--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/express-session": "^1.17.7",
     "@types/jest": "29.5.5",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^18.15.8",
@@ -35,14 +36,20 @@
   "dependencies": {
     "@line/bot-sdk": "^7.5.2",
     "cheerio-httpcli": "^0.8.3",
+    "connect-mongo": "^5.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "env-cmd": "^10.1.0",
     "express": "^4.18.2",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^7.0.1",
+    "express-session": "^1.17.3",
     "mongoose": "^7.0.3",
     "node-readability": "^3.0.0",
     "passport": "^0.6.0",
     "passport-google-oauth": "2.0.0",
+    "pino": "^8.15.1",
+    "pino-pretty": "^10.2.0",
     "ts-node": "^10.9.1",
     "tsc-alias": "^1.8.4"
   },
