--- a/package.json
+++ b/package.json
@@ -14,6 +14,13 @@
     "deploy": "yarn build && gcloud run deploy --source ."
   },
   "devDependencies": {
+    "@tsed/common": "^7.75.0",
+    "@tsed/core": "^7.75.0",
+    "@tsed/di": "^7.75.0",
+    "@tsed/exceptions": "^7.75.0",
+    "@tsed/json-mapper": "^7.75.0",
+    "@tsed/platform-express": "^7.75.0",
+    "@tsed/schema": "^7.75.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.17.7",
@@ -27,6 +34,7 @@
     "eslint-config-prettier": "9.0.0",
     "eslint-plugin-prettier": "5.0.1",
     "jest": "^29.5.0",
+    "nodemon": "^3.1.4",
     "prettier": "^3.0.0",
     "ts-jest": "29.1.1",
     "ts-node-dev": "^2.0.0",
@@ -34,8 +42,11 @@
     "typescript": "^5.5.3"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
     "cheerio-httpcli": "^0.8.3",
+    "compression": "^1.7.4",
     "connect-mongo": "^5.0.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "env-cmd": "^10.1.0",
@@ -43,6 +54,7 @@
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^7.0.1",
     "express-session": "^1.17.3",
+    "method-override": "^3.0.0",
     "mongoose": "^7.0.3",
     "node-readability": "^3.0.0",
     "openai": "^4.0.0",
@@ -50,7 +62,7 @@
     "passport-google-oauth": "2.0.0",
     "pino": "^8.15.1",
     "pino-pretty": "^10.2.0",
-    "ts-node": "^10.9.1",
+    "ts-node": "^10.9.2",
     "tsc-alias": "^1.8.4"
   },
   "jest": {
