--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,15 +2,12 @@
   "compilerOptions": {
     "module": "commonjs",
     "esModuleInterop": true,
-    "declaration": true,
     "removeComments": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
-    "target": "es2017",
     "sourceMap": true,
     "outDir": "./dist",
-    "baseUrl": "./",
     "incremental": true,
     "skipLibCheck": true,
     "strictNullChecks": false,
@@ -18,6 +15,13 @@
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
+    "baseUrl": ".",
+    "target": "es2018",
+    "lib": ["es7", "dom", "esnext.asynciterable"],
+    "typeRoots": ["./node_modules/@types"],
+    "moduleResolution": "node",
+    "declaration": false,
+    "allowJs": true,
     "paths": {
       "~/*": [
         "src/*"
