--- a/package.json
+++ b/package.json
@@ -6,11 +6,20 @@
   "author": "itizawa <itizawa.pen@gmail.com>",
   "license": "MIT",
   "scripts": {
+    "clean": "rimraf '{src,test}/**/*.{js,js.map}'",
     "build": "tsc -p tsconfig.json && tsc-alias -p tsconfig.json",
-    "start": "yarn build && node dist/index.js",
+    "test": "yarn clean && yarn test:lint && yarn test:coverage",
+    "test:unit": "cross-env NODE_ENV=test mocha",
+    "test:coverage": "cross-env NODE_ENV=test nyc mocha",
+    "test:lint": "tslint --project tsconfig.json",
+    "test:lint:fix": "tslint --project tsconfig.json --fix",
+    "tsc": "tsc --project tsconfig.json",
+    "tsc:w": "tsc --project tsconfig.json -w",
+    "start": "nodemon --watch \"src/**/*.ts\" --ignore \"node_modules/**/*\" --exec ts-node src/index.ts",
+    "start:prod": "cross-env NODE_ENV=production node dist/index.js",
+    "docker:build": "yarn build && docker-compose build",
     "lint": "eslint src/**/**.ts",
     "dev": "env-cmd -f ./.env ts-node-dev -r tsconfig-paths/register src/index.ts",
-    "test": "jest",
     "deploy": "yarn build && gcloud run deploy --source ."
   },
   "devDependencies": {
