--- a/package.json
+++ b/package.json
@@ -8,11 +8,9 @@
   "scripts": {
     "clean": "rimraf '{src,test}/**/*.{js,js.map}'",
     "build": "tsc -p tsconfig.json && tsc-alias -p tsconfig.json",
-    "test": "yarn clean && yarn test:lint && yarn test:coverage",
+    "test": "yarn clean && yarn test:coverage",
     "test:unit": "cross-env NODE_ENV=test mocha",
     "test:coverage": "cross-env NODE_ENV=test nyc mocha",
-    "test:lint": "tslint --project tsconfig.json",
-    "test:lint:fix": "tslint --project tsconfig.json --fix",
     "tsc": "tsc --project tsconfig.json",
     "tsc:w": "tsc --project tsconfig.json -w",
     "start": "nodemon --watch \"src/**/*.ts\" --ignore \"node_modules/**/*\" --exec ts-node src/index.ts",
