--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "clean": "rimraf '{src,test}/**/*.{js,js.map}'",
     "build": "tsc -p tsconfig.json && tsc-alias -p tsconfig.json",
     "test": "yarn clean && yarn test:coverage",
-    "test:unit": "cross-env NODE_ENV=test mocha",
-    "test:coverage": "cross-env NODE_ENV=test nyc mocha",
+    "test:unit": "cross-env NODE_ENV=test jest",
+    "test:coverage": "cross-env NODE_ENV=test jest",
     "tsc": "tsc --project tsconfig.json",
     "tsc:w": "tsc --project tsconfig.json -w",
     "start": "nodemon --watch \"src/**/*.ts\" --ignore \"node_modules/**/*\" --exec ts-node src/index.ts",
@@ -37,6 +37,7 @@
     "@types/passport": "^1.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "cross-env": "^7.0.3",
     "eslint": "8.52.0",
     "eslint-config-prettier": "9.0.0",
     "eslint-plugin-prettier": "5.0.1",
