--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "tsc": "tsc --project tsconfig.json",
     "tsc:w": "tsc --project tsconfig.json -w",
     "start": "nodemon --watch \"src/**/*.ts\" --ignore \"node_modules/**/*\" --exec ts-node src/index.ts",
-    "start:prod": "cross-env NODE_ENV=production node dist/index.js",
+    "start:prod": "yarn build && cross-env NODE_ENV=production node dist/index.js",
     "docker:build": "yarn build && docker-compose build",
     "lint": "eslint src/**/**.ts",
     "dev": "env-cmd -f ./.env ts-node-dev -r tsconfig-paths/register src/index.ts",
