--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "ts-jest": "29.1.1",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.1.2",
-    "typescript": "^5.5.3"
+    "typescript": "5.5.3"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
