--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "typescript": "5.5.3"
   },
   "dependencies": {
-    "body-parser": "^1.20.2",
+    "body-parser": "1.20.2",
     "compression": "^1.7.4",
     "connect-mongo": "^5.0.0",
     "cookie-parser": "^1.4.6",
