--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test:coverage": "cross-env NODE_ENV=test jest",
     "tsc": "tsc --project tsconfig.json",
     "tsc:w": "tsc --project tsconfig.json -w",
-    "start": "nodemon --watch \"src/**/*.ts\" --ignore \"node_modules/**/*\" --exec ts-node src/index.ts",
+    "start": "yarn build && node dist/index.js",
     "start:prod": "yarn build && cross-env NODE_ENV=production node dist/index.js",
     "docker:build": "yarn build && docker-compose build",
     "lint": "eslint src/**/**.ts",
