--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "devDependencies": {
     "@tsed/common": "7.75.0",
     "@tsed/core": "7.75.0",
-    "@tsed/di": "^7.75.0",
+    "@tsed/di": "7.75.0",
     "@tsed/exceptions": "^7.75.0",
     "@tsed/json-mapper": "^7.75.0",
     "@tsed/platform-express": "^7.75.0",
