--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wiscro",
+  "name": "wiscro-server",
   "version": "1.0.0",
   "main": "index.js",
   "repository": "git@github.com:itizaworld/line-stock.git",
